# Solar-System--CG

./: README.md  script.js
fase1/: CMakeLists.txt
fase1/Estrutura/: estrutura.h  example.xml
fase1/Files3D/: cilindro.3d  plano.3d  sphere.3d
fase1/Generator/: box.cpp  cilindro.cpp  cone.cpp  generator.cpp  plano.cpp  sphere.cpp
fase1/engine/: engine.cpp
fase2/: CMakeLists.txt
fase2/Estrutura/: Cor.cpp  Cor.h  Escala.cpp  Escala.h  Group.cpp  Group.h  Rotacao.cpp  Rotacao.h  Transformacao.cpp  Transformacao.h  Translacao.cpp  Translacao.h  Vertices.cpp  Vertices.h
fase2/Examples/: sistemaSolar.xml
fase2/Files3D/: cone.3d  orbita.3d  plano.3d
fase2/Generator/: box.cpp  cilindro.cpp  cone.cpp  generator.cpp  plano.cpp  sphere.cpp  torus.cpp
fase2/engine/: engine.cpp  engine.h  parser.cpp
fase3/: CMakeLists.txt
fase3/Estrutura/: Cor.cpp  Escala.cpp  Group.cpp  Rotacao.cpp  Transformacao.cpp  Translacao.cpp  Vertices.cpp
fase3/Estrutura/headers/: Cor.h  Escala.h  Group.h  Rotacao.h  Translacao.h  estrutura.h
fase3/Examples/: example.xml  example3.xml  example5.xml  sistemaSolar.xml
fase3/Files3D/: bezier.3d  box.3d  sphere.3d  torus.3d
fase3/Generator/: cone.cpp  generator.cpp  plano.cpp  sphere.cpp  torus.cpp
fase3/engine/: engine.cpp  engine.h  parser.cpp
fase3/engine/Camera/: camara.cpp
fase4/: CMakeLists.txt
fase4/Estrutura/: Cor.cpp  Escala.cpp  Group.cpp  Rotacao.cpp  Translacao.cpp  Vertices.cpp
fase4/Estrutura/headers/: Cor.h  Escala.h  Group.h  Rotacao.h  Transformacao.h  Translacao.h  Vertices.h
fase4/Examples/: example2.xml  example4.xml  example6.xml  example7.xml  example8.xml  sistemaSolar.xml
fase4/Files3D/: cilindro.3d  plano.3d  sphere.3d  torus.3d
fase4/Generator/: bezier.cpp  box.cpp  cilindro.cpp  generator.cpp  plano.cpp  sphere.cpp  torus.cpp
fase4/engine/: engine.cpp  parser.cpp
